# fast-abi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  binding.gyp  jest.config.js  package.json  tsconfig.json
.github/workflows/: publish.yml
native/: Cargo.toml
native/src/: lib.rs  result_ext.rs
src/: fast_abi.ts  index.ts  lib.rs  result_ext.rs
src/__tests__/: BalanceChecker.abi.json  fast_abi.test.ts
