[package]
authors = ["Jacob Evans <jacob@dekz.net>"]
edition = "2018"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "fast-abi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.69"
ethabi = "14.0"
hex = "0.4.2"

[dependencies.neon]
default-features = false
features = ["napi-6"]
version = "0.10.1"
